tests/spec/emit/snapshots/struct_spread_temp_var_no_collision.snap
---
source: tests/spec/emit/types.rs
description: |
  
  import "go:fmt"
  
  struct Point { x: int, y: int }
  
  fn main() {
    let p1 = Point { x: 1, y: 2 }
    let p2 = Point { x: 3, ..p1 }
    let copy_1 = 7
    fmt.Println(p2.x, copy_1)
  }
---
package main

import "fmt"

type Point struct {
	x int
	y int
}

func main() {
	p1 := Point{
		x: 1,
		y: 2,
	}
	p2 := p1
	p2.x = 3
	copy_1 := 7
	fmt.Println(p2.x, copy_1)
}
