tests/spec/emit/snapshots/struct_spread_update.snap
---
source: tests/spec/emit/types.rs
description: "input: \nstruct Point { x: int, y: int }\n\nfn test() -> Point {\n  let p = Point { x: 1, y: 2 };\n  Point { x: 10, ..p }\n}\n"
---
package main

type Point struct {
	x int
	y int
}

func test() Point {
	p := Point{
		x: 1,
		y: 2,
	}
	copy_1 := p
	copy_1.x = 10
	return copy_1
}
