tests/spec/emit/snapshots/struct_spread_update_multiple_fields.snap
---
source: tests/spec/emit/types.rs
description: |
  
  struct Config { host: string, port: int, timeout: int }
  
  fn test() -> Config {
    let default_config = Config { host: "localhost", port: 8080, timeout: 30 };
    Config { port: 9000, timeout: 60, ..default_config }
  }
---
package main

type Config struct {
	host    string
	port    int
	timeout int
}

func test() Config {
	default_config := Config{
		host:    "localhost",
		port:    8080,
		timeout: 30,
	}
	copy_1 := default_config
	copy_1.port = 9000
	copy_1.timeout = 60
	return copy_1
}
