tests/spec/emit/snapshots/struct_spread_update_public_fields.snap
---
source: tests/spec/emit/types.rs
description: |
  
  struct Point { pub x: int, pub y: int }
  
  fn test() -> Point {
    let p = Point { x: 1, y: 2 };
    Point { x: 10, ..p }
  }
---
package main

type Point struct {
	X int
	Y int
}

func test() Point {
	p := Point{
		X: 1,
		Y: 2,
	}
	copy_1 := p
	copy_1.X = 10
	return copy_1
}
