tests/spec/emit/snapshots/struct_user_pascal_string_method_suppresses_auto_stringer.snap
---
source: tests/spec/emit/types.rs
description: |
  
  struct A { a: string }
  
  impl A {
    fn String(self) -> string {
      self.a + "asdf"
    }
  }
  
  fn main() {
    let a = A { a: "text" }
    let _ = a
  }
---
package main

type A struct {
	a string
}

func (a A) String() string {
	return a.a + "asdf"
}

func main() {}
