tests/spec/emit/snapshots/struct_user_string_and_go_string_methods.snap
---
source: tests/spec/emit/types.rs
description: |
  
  struct Point { x: int, y: int }
  
  impl Point {
    pub fn string(self) -> string {
      "custom display"
    }
  
    pub fn goString(self) -> string {
      "custom debug"
    }
  }
  
  fn main() {
    let p = Point { x: 1, y: 2 }
    let _ = p
  }
---
package main

type Point struct {
	x int
	y int
}

func (p Point) String() string {
	return "custom display"
}

func (p Point) GoString() string {
	return "custom debug"
}

func main() {
	p := Point{
		x: 1,
		y: 2,
	}
	_ = p
}
